--- a/swift-common/pom.xml
+++ b/swift-common/pom.xml
@@ -2,13 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zheng</groupId>
-    <artifactId>zheng-common</artifactId>
+    <groupId>com.swift</groupId>
+    <artifactId>swift-common</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>zheng-common</name>
-    <url>http://www.zhangshuzheng.cn</url>
+ 
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -324,7 +324,7 @@
     </dependencies>
 
     <build>
-        <finalName>zheng-common</finalName>
+        <finalName>swift-common</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
